Fixed grid alignment

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.table th,
+.table td {
+  vertical-align: middle !important;
+  text-align: center;
+}
